--- a/assets/sass/blocks/_nav.scss
+++ b/assets/sass/blocks/_nav.scss
@@ -2,6 +2,17 @@
 --------------------------------------------------------- */
 
 
+.headerNav__list {
+    display: flex;
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    @include position(absolute, 0);
+}
+
 /* TOGGLE
 --------------------------------------------------------- */
 
@@ -14,3 +25,4 @@
 
     cursor: pointer;
 }
+
