grid layout added

--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -23,6 +23,8 @@
 
 // General purpose
 @import './_utilities/functions';
+@import './_utilities/layout';
+@import './_utilities/grid';
 @import './_utilities/fonts';
 @import './helpers/helpers';
 
