--- a/assets/sass/helpers/_helpers.scss
+++ b/assets/sass/helpers/_helpers.scss
@@ -90,3 +90,15 @@
 .visually-hidden {
     @include visually-hidden;
 }
+
+.dfc {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+}
+
+.dfr {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+}
