--- a/assets/sass/_main.scss
+++ b/assets/sass/_main.scss
@@ -26,8 +26,8 @@ html {
 
 body {
     height: 100%;
-    margin-right: 15%;
-    margin-left: 15%;
+    // max-width: 144rem;
+    // margin: auto;
 
     text-rendering: optimizeLegibility;
     @include font-smoothing(on);
@@ -59,3 +59,38 @@ p {
 }
 
 
+#gridWrapper {
+    position: fixed;
+    height: 100vh;
+    inset: 0;
+
+    opacity: 0;
+
+    pointer-events: none;
+
+    transition: opacity .2s $ease-in-out-cubic;
+}
+
+.is-visible {
+    opacity: 1 !important;
+}
+
+.gridCol {
+    float: left;
+    height: 100%;
+
+    background: #f00;
+    opacity: .2;
+
+
+    // MQ
+    @include maxw($bp-mobile) {
+        &:nth-child(#{$m-col-number}) {
+            margin-right: 0 !important;
+
+            & ~ .gridCol {
+                display: none;
+            }
+        }
+    }
+}
