--- a/assets/sass/blocks/_footer.scss
+++ b/assets/sass/blocks/_footer.scss
@@ -2,11 +2,14 @@
 --------------------------------------------------------- */
 
 footer {
-    padding: 5rem 0;
-
-    border-top: .1rem solid rgba($color: #fff, $alpha: .1);
-
     span {
         text-transform: uppercase;
     }
+}
+
+.footer__inner {
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+
+    border-top: .1rem solid rgba($color: #fff, $alpha: .1);
 }
