added nav overlay fix

--- a/assets/sass/_variable.scss
+++ b/assets/sass/_variable.scss
@@ -54,3 +54,11 @@ $c-gray:             #8e8e8e;
 
 /* Fonts
 --------------------------------------------------------- */
+
+.neue {
+    font-family: 'pp_neue_montrealbook';
+}
+
+.bigil {
+    font-family: 'Bigilla';
+}
