--- a/assets/sass/views/home/sections/_about.scss
+++ b/assets/sass/views/home/sections/_about.scss
@@ -11,3 +11,27 @@
         flex-direction: column;
     }
 }
+
+.homeAbout__soft {
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+}
+
+.homeAboutSoft_list,
+.homeAboutTech_list {
+
+    li {
+        position: relative;
+
+        &::after {
+            content: '-';
+        }
+
+        &:last-child {
+            &::after {
+                content: none;
+            }
+        }
+    }
+}
+
