--- a/assets/sass/_main.scss
+++ b/assets/sass/_main.scss
@@ -32,7 +32,7 @@ body {
     text-rendering: optimizeLegibility;
     @include font-smoothing(on);
     font-family: 'Bigilla';
-    font-size: 1.8rem;
+    font-size: 1.9rem;
     line-height: 1.83;
     color: #fff;
 
@@ -56,6 +56,7 @@ h4 {
 
 p {
     font-family: 'pp_neue_montrealbook';
+    line-height: 1.5;
 }
 
 
