--- a/assets/sass/_main.scss
+++ b/assets/sass/_main.scss
@@ -84,14 +84,22 @@ p {
     opacity: .2;
 
 
-    // MQ
-    @include maxw($bp-mobile) {
-        &:nth-child(#{$m-col-number}) {
-            margin-right: 0 !important;
+    // // MQ
+    // @include maxw($bp-mobile) {
+    //     &:nth-child(#{$m-col-number}) {
+    //         margin-right: 0 !important;
 
-            & ~ .gridCol {
-                display: none;
-            }
-        }
-    }
+    //         & ~ .gridCol {
+    //             display: none;
+    //         }
+    //     }
+    // }
+}
+
+
+.brick {
+    height: 15rem;
+
+    background: gray;
+    margin-bottom: 3rem;
 }
