--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -23,14 +23,15 @@
 
 // General purpose
 @import './_utilities/functions';
-@import './_utilities/layout';
-@import './_utilities/grid';
+// @import './_utilities/layout';
+// @import './_utilities/grid';
 @import './_utilities/fonts';
 @import './helpers/helpers';
 
 
 // Main
 @import 'main';
+@import './grid';
 
 @import './blocks/intro';
 @import './blocks/nav';
