--- a/assets/sass/blocks/_intro.scss
+++ b/assets/sass/blocks/_intro.scss
@@ -14,6 +14,11 @@
     background-color: #fff;
 
     transition: 1s $ease-in-out-cubic;
+
+    // MQ
+    @include maxw($bp-mobile) {
+        font-size: 4rem;
+    }
 }
 
 .logo-header {
